Allow GitHub Pages origin for CORS